--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 fastapi
 uvicorn[standard]
 websockets
-requests
+httpx
 beautifulsoup4
 SQLAlchemy
 psycopg2-binary
-httpx  # [UPGRADE] 新增非同步 HTTP 函式庫
