--- a/render.yaml
+++ b/render.yaml
@@ -11,7 +11,8 @@ services:
       - key: DATABASE_URL
         fromDatabase:
           name: ptt-pni-database # 請換成您自己的資料庫名稱
-          property: internalDatabaseUrl
+          # [FIX] 將屬性名稱從 internalDatabaseUrl 修正為正確的 connectionString
+          property: connectionString
       - key: ADMIN_SECRET_KEY
         sync: false # 請記得在 Render 儀表板上手動設定此密碼
       - key: PYTHON_VERSION
