--- a/render.yaml
+++ b/render.yaml
@@ -5,13 +5,13 @@ services:
     plan: free
     buildCommand: |
       pip install -r requirements.txt
-      playwright install --with-deps chromium
+      # [FIX] 移除 --with-deps 參數，以避免權限問題
+      playwright install chromium
     startCommand: uvicorn ptt_backend:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: DATABASE_URL
         fromDatabase:
           name: ptt-pni-database # 請換成您自己的資料庫名稱
-          # [FIX] 將屬性名稱從 internalDatabaseUrl 修正為正確的 connectionString
           property: connectionString
       - key: ADMIN_SECRET_KEY
         sync: false # 請記得在 Render 儀表板上手動設定此密碼
