--- a/render.yaml
+++ b/render.yaml
@@ -3,10 +3,11 @@ services:
     name: ptt-gossiping-live # 您可以換成您自己的服務名稱
     env: python
     plan: free
+    # 建築指令：先安裝 Python 套件，再安裝瀏覽器
     buildCommand: |
       pip install -r requirements.txt
-      # [FIX] 移除 --with-deps 參數，以避免權限問題
       playwright install chromium
+    # 啟動指令：用正確的方式啟動 FastAPI 伺服器
     startCommand: uvicorn ptt_backend:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: DATABASE_URL
@@ -14,6 +15,8 @@ services:
           name: ptt-pni-database # 請換成您自己的資料庫名稱
           property: connectionString
       - key: ADMIN_SECRET_KEY
-        sync: false # 請記得在 Render 儀表板上手動設定此密碼
+        # 為了安全，這個密碼不會跟著 GitHub 同步
+        # 您需要在部署後，手動前往 Render 儀表板的 Environment 分頁設定
+        sync: false 
       - key: PYTHON_VERSION
         value: 3.11.4
