--- a/render.yaml
+++ b/render.yaml
@@ -1,14 +1,10 @@
 services:
   - type: web
     name: ptt-gossiping-live # 您可以換成您自己的服務名稱
-    env: python
+    env: docker # [FIX] 改為使用 Docker 環境，這是最穩健的作法
     plan: free
-    # 建築指令：先安裝 Python 套件，再安裝瀏覽器
-    buildCommand: |
-      pip install -r requirements.txt
-      playwright install chromium
-    # 啟動指令：用正確的方式啟動 FastAPI 伺服器
-    startCommand: uvicorn ptt_backend:app --host 0.0.0.0 --port $PORT
+    # Docker 環境會使用 Dockerfile 來建置，不再需要 buildCommand 和 startCommand
+    dockerfilePath: ./Dockerfile 
     envVars:
       - key: DATABASE_URL
         fromDatabase:
@@ -18,5 +14,3 @@ services:
         # 為了安全，這個密碼不會跟著 GitHub 同步
         # 您需要在部署後，手動前往 Render 儀表板的 Environment 分頁設定
         sync: false 
-      - key: PYTHON_VERSION
-        value: 3.11.4
